apps/base/forgejo/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  labels:
    pod-security.kubernetes.io/enforce: restricted
  name: forgejo
