apps/base/forgejo/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: forgejo
    app.kubernetes.io/name: forgejo
  name: forgejo
  namespace: forgejo
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`forgejo.example.com`)
      middlewares:
        - name: ip-allowlist
          namespace: traefik
        - name: security-headers
          namespace: traefik
      services:
        - name: forgejo-http
          port: 3000
  tls:
    secretName: forgejo-tls
